--- a/sunsynk-scraper/config.yaml
+++ b/sunsynk-scraper/config.yaml
@@ -1,7 +1,8 @@
 name: "Sunsynk Scraper"
 description: "Scrapes the SunSynk / inteless API for data on your solar setup!"
 version: "0.2.0"
-slug: "sunsynk_scrapper"
+slug: "sunsynk-scraper"
+url: "https://github.com/home-assistant/addons-example/tree/main/example"
 init: false
 arch:
   - aarch64
@@ -11,3 +12,10 @@ arch:
   - i386
 services:
   - mqtt:need
+map:
+  - share:rw
+options:
+  message: "Hello world..."
+schema:
+  message: "str?"
+#image: "ghcr.io/thepheonixguy/{arch}-addon-sunsynk-scraper"
