✨feat: include image tag

--- a/sunsynk-scraper/config.yaml
+++ b/sunsynk-scraper/config.yaml
@@ -2,7 +2,7 @@ name: "Sunsynk Scraper"
 description: "Scrapes the SunSynk / inteless API for data on your solar setup!"
 version: "0.2.0"
 slug: "sunsynk-scraper"
-url: "https://github.com/home-assistant/addons-example/tree/main/example"
+url: "https://github.com/ThePheonixGuy/sunsynk-scraper-addon/tree/main/sunsynk-scraper"
 init: false
 arch:
   - aarch64
@@ -18,4 +18,4 @@ options:
   message: "Hello world..."
 schema:
   message: "str?"
-#image: "ghcr.io/thepheonixguy/{arch}-addon-sunsynk-scraper"
+image: "ghcr.io/thepheonixguy/{arch}-addon-sunsynk-scraper"
