✨feat: add configuration options

--- a/sunsynk-scraper/Dockerfile
+++ b/sunsynk-scraper/Dockerfile
@@ -3,12 +3,12 @@ FROM $BUILD_FROM
 
 RUN pip3 install --no-cache-dir --disable-pip-version-check paho-mqtt~=1.6.1 requests~=2.28.1
 
-WORKDIR /app
+WORKDIR /data
 
 COPY . ./
 
 RUN ls
 
-RUN chmod a+x /app/run.sh
+RUN chmod a+x /data/run.sh
 
 CMD [ "/app/run.sh" ]
