--- a/sunsynk-scraper/config.yaml
+++ b/sunsynk-scraper/config.yaml
@@ -15,7 +15,25 @@ services:
 map:
   - share:rw
 options:
-  message: "Hello world..."
+  mqtt_username: null
+  mqtt_password: null
+  mqtt_host: "core-mosquitto"
+  mqtt_port: 1883
+  sunsynk_email: "Hello world..."
+  sunsynk_password: "Hello world..."
+  debug_logging: false
+  update_interval: 60
+  battery_discharge_rate: 2.5
+  battery_min_state_of_charge: 15
 schema:
-  message: "str?"
+  mqtt_username: str
+  mqtt_password: str
+  mqtt_host: str?
+  mqtt_port: int?
+  sunsynk_email: str
+  sunsynk_password: str
+  debug_logging: bool?
+  update_interval: int(30,300)
+  battery_discharge_rate: float(0.1,100)
+  battery_min_state_of_charge: int(1,100)
 image: "ghcr.io/thepheonixguy/{arch}-addon-sunsynk-scraper"
