--- a/sunsynk-scraper/config.yaml
+++ b/sunsynk-scraper/config.yaml
@@ -6,6 +6,10 @@ url: "https://github.com/ThePheonixGuy/sunsynk-scraper-addon/tree/main/sunsynk-s
 init: false
 arch:
   - aarch64
+  - amd64
+  - armhf
+  - armv7
+  - i386
 services:
   - mqtt:need
 map:
