--- a/sunsynk-scraper/config.yaml
+++ b/sunsynk-scraper/config.yaml
@@ -25,6 +25,7 @@ options:
   update_interval: 60
   battery_discharge_rate: 2.5
   battery_min_state_of_charge: 15
+  region: 1
 schema:
   mqtt_username: str
   mqtt_password: str
@@ -36,4 +37,5 @@ schema:
   update_interval: int(30,300)
   battery_discharge_rate: float(0.1,100)
   battery_min_state_of_charge: int(1,100)
+  region: int(1, 2)
 image: "ghcr.io/thepheonixguy/{arch}-addon-sunsynk-scraper"
